--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=copyright" />
+    <meta name="description" content="JeeNeeTards is a web app that helps you prepare for JEE and NEET exams. It provides a comprehensive study plan, practice questions, and a progress tracker.">
+    <meta name="keywords" content="JeeNeeTards, JEE, NEET, study plan, practice questions, progress tracker">
+    <meta name="author" content="Rishi Raj">
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="index, follow">
+    <meta name="bingbot" content="index, follow">
+    <meta name="alexa" content="index, follow">
+    <meta name="yandex" content="index, follow">
+    
     <title>JeeNeeTards</title>
   </head>
   <body>
